# python-devcontainer-env

./: .gitignore
mcr-base/.devcontainer/: devcontainer.json
rye/: Dockerfile  README.md  docker-compose.yml
rye/.devcontainer/: devcontainer.json  docker-compose.yml
sample/: pyproject.toml
sample/.devcontainer/: devcontainer.json
uv-ruff/: Dockerfile  README.md  pyproject.toml
uv-ruff/.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
